# opc-40700-simulator

./: .gitignore  Cargo.toml  Dockerfile  README.md  run-copilot-frontend.sh
.github/: copilot-instructions.md
.github/prompts/: create-frontend.prompt.md
.github/workflows/: build-and-publish-opc-30060.yml  build-and-publish-packer.yml  build-and-publish.yml  ci.yml
docs/: opcua-discovery-c-implementation.md
reference/opcua-large-c2/: CMakeLists.txt  Dockerfile  k8s-deployment.yaml
reference/opcua-large-c2/nodesets-generated/: ns_di.c  ns_di.h  ns_mcc11420.h  ns_mcc11450.h  ns_mcc11470.h  ns_mcc11490.h  ns_packml.c  ns_packml.h  ns_tmc.h
reference/opcua-large-c2/scripts/: strip-dangling.py
reference/opcua-large-c2/src/: main.c
reference/opcua-packer/: Dockerfile  k8s-deployment.yaml  requirements.txt  server.py
reference/opcua-packer/static/: index.html
src/: main.rs
test-client/: package-lock.json  package.json
test-client/frontend/: README.md  index.html  package-lock.json
test-client/frontend/src/: App.tsx  index.css  types.ts
test-client/frontend/src/components/: ConnectionStatusBar.tsx  Dashboard.tsx  TreeView.tsx
test-client/frontend/src/hooks/: useOpcUaSocket.ts
test-client/src/: client.ts  device-health-probe.ts  server.ts
